--- a/index.html
+++ b/index.html
@@ -4,33 +4,33 @@
         <title>Delote-Beauty</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="../css/style.css" rel="stylesheet">
+        <link href="./css/style.css" rel="stylesheet">
     </head>
     <body>
         <header id="header">
             <div class="container">
                 <nav class="navigation">
                     <a href="#">
-                        <img src="../img/inst.svg" alt="инстаграм" class="inst">
+                        <img src="./img/inst.svg" alt="инстаграм" class="inst">
                     </a>
                     <ul class="nav">
                         <li><a href="#"><p>Главная</p></a></li>
                         <li><a href="../pages/our-team.html" target="_self"><p>Мастера</p></a></li>
                         <li><a href="#"><p>Косметика</p></a></li>
                     </ul>
-                    <img src="../img/logo.svg" alt="логотип" class="logo">
+                    <img src="./img/logo.svg" alt="логотип" class="logo">
                     <ul class="nav">
                         <li><a href="#"><p>Акции</p></a></li>
                         <li><a href="#"><p>Отзывы</p></a></li>
                         <li><a href="../pages/contacts.html" target="_self"><p>Контакты</p></a></li>
                     </ul>
                     <button class="btn">
-                        <img src="../img/right-menu.svg" alt="меню" class="menu">
+                        <img src="./img/right-menu.svg" alt="меню" class="menu">
                     </button>
                 </nav>
                 <div class="sidebar">
                     <button class="btn">
-                        <img src="../img/close-icon.svg" alt="закрыть" class="close">
+                        <img src="./img/close-icon.svg" alt="закрыть" class="close">
                     </button>
                     <div class="inner-sidebar">
                         <div class="text-inner-sidebar">
@@ -93,7 +93,7 @@
                 </div>
                 <div class="scroll-to-down">
                     <div class="scroll-down">
-                        <img src="../img/scroll-down.svg" alt="мышь">
+                        <img src="./img/scroll-down.svg" alt="мышь">
                     </div>
                     <p>
                         Прокрутите вниз
@@ -105,7 +105,7 @@
             <div class="container comment">
                 <div class="comment-space">
                     <div class="comment-img">
-                        <img src="../img/comment''.svg" alt="ковычки">
+                        <img src="./img/comment''.svg" alt="ковычки">
                     </div>
                     <div class="comment-text">
                         <p>
@@ -127,7 +127,7 @@
                     <div class="grid-1">
                         <div class="img-grid">
                             <a href="../pages/price.html" target="_self">
-                                <img src="../img/services/barbershop.svg" alt="завивка волос" class="grid-img">
+                                <img src="./img/services/barbershop.svg" alt="завивка волос" class="grid-img">
                             </a>
                             <div class="shadow"></div>
                         </div>
@@ -140,7 +140,7 @@
                     <div class="grid-2">
                         <div class="img-grid">
                             <a href="../pages/price.html" target="_self">
-                                <img src="../img/services/manicure.svg" alt="маникюр" class="grid-img">
+                                <img src="./img/services/manicure.svg" alt="маникюр" class="grid-img">
                             </a>
                             <div class="shadow"></div>
                         </div>
@@ -153,7 +153,7 @@
                     <div class="grid-3">
                         <div class="img-grid">
                             <a href="../pages/price.html" target="_self">
-                                <img src="../img/services/pedicure.svg" alt="Педикюр" class="grid-img">
+                                <img src="./img/services/pedicure.svg" alt="Педикюр" class="grid-img">
                             </a>
                             <div class="shadow"></div>
                         </div>
@@ -166,7 +166,7 @@
                     <div class="grid-4">
                         <div class="img-grid">
                             <a href="../pages/price.html" target="_self">
-                                <img src="../img/services/cosmetology.svg" alt="маска для лица" class="grid-img">
+                                <img src="./img/services/cosmetology.svg" alt="маска для лица" class="grid-img">
                             </a>
                             <div class="shadow"></div>
                         </div>
@@ -179,7 +179,7 @@
                     <div class="grid-5">
                         <div class="img-grid">
                             <a href="../pages/price.html">
-                                <img src="../img/services/body-esthetician.svg" alt="эстетист по телу" class="grid-img">
+                                <img src="./img/services/body-esthetician.svg" alt="эстетист по телу" class="grid-img">
                             </a>
                             <div class="shadow"></div>
                         </div>
@@ -192,7 +192,7 @@
                     <div class="grid-6">
                         <div class="img-grid">
                             <a href="../pages/price.html">
-                                <img src="../img/services/makeup.svg" alt="макияж" class="grid-img">
+                                <img src="./img/services/makeup.svg" alt="макияж" class="grid-img">
                             </a>
                             <div class="shadow"></div>
                         </div>
@@ -204,10 +204,10 @@
                     </div>
                 </div>
                 <div class="contributors">
-                    <img src="../img/contributors/img1.png" alt="KEVIN" class="img1">
-                    <img src="../img/contributors/img2.png" alt="ORIBE" class="img2">
-                    <img src="../img/contributors/img3.png" alt="ALTERNA" class="img3">
-                    <img src="../img/contributors/img4.png" alt="ALDO_COPPOLA" class="img4">
+                    <img src="./img/contributors/img1.png" alt="KEVIN" class="img1">
+                    <img src="./img/contributors/img2.png" alt="ORIBE" class="img2">
+                    <img src="./img/contributors/img3.png" alt="ALTERNA" class="img3">
+                    <img src="./img/contributors/img4.png" alt="ALDO_COPPOLA" class="img4">
                 </div>
             </div>
         </section>
@@ -227,31 +227,31 @@
                     </div>
                     <div class="img-all">
                         <div class="img-works">
-                            <img src="../img/our-work/work-9.png" alt="красотаа" class="img-works">
+                            <img src="./img/our-work/work-9.png" alt="красотаа" class="img-works">
                         </div>
                         <div class="img-works">
-                            <img src="../img/our-work/work-6.png" alt="красотаа" class="img-works">
+                            <img src="./img/our-work/work-6.png" alt="красотаа" class="img-works">
                         </div>
                         <div class="img-works">
-                            <img src="../img/our-work/work-3.png" alt="красотаа" class="img-works">
+                            <img src="./img/our-work/work-3.png" alt="красотаа" class="img-works">
                         </div>
                         <div class="img-works">
-                            <img src="../img/our-work/work-8.png" alt="красотаа" class="img-works">
+                            <img src="./img/our-work/work-8.png" alt="красотаа" class="img-works">
                         </div>
                         <div class="img-works">
-                            <img src="../img/our-work/work-5.png" alt="красотаа" class="img-works">
+                            <img src="./img/our-work/work-5.png" alt="красотаа" class="img-works">
                         </div>
                         <div class="img-works">
-                            <img src="../img/our-work/work-2.png" alt="красотаа" class="img-works">
+                            <img src="./img/our-work/work-2.png" alt="красотаа" class="img-works">
                         </div>
                         <div class="img-works">
-                            <img src="../img/our-work/work-7.png" alt="красотаа" class="img-works">
+                            <img src="./img/our-work/work-7.png" alt="красотаа" class="img-works">
                         </div>
                         <div class="img-works">
-                            <img src="../img/our-work/work-4.png" alt="красотаа" class="img-works">
+                            <img src="./img/our-work/work-4.png" alt="красотаа" class="img-works">
                         </div>
                         <div class="img-works">
-                            <img src="../img/our-work/work-1.png" alt="красотаа уф" class="img-works">
+                            <img src="./img/our-work/work-1.png" alt="красотаа уф" class="img-works">
                         </div>
                     </div>
                 </div>
@@ -260,7 +260,7 @@
         <footer id="footer">
             <div class="container">
                 <div class="footer">
-                    <img src="../img/logo.svg" alt="логотип" class="logo">
+                    <img src="./img/logo.svg" alt="логотип" class="logo">
                     <div class="contacts">
                         <div class="title-contacts">
                             <h4>
@@ -310,7 +310,7 @@
                         </h4>
                         <div class="img-inst">
                             <a href="#">
-                                <img src="../img/inst.svg" alt="инстаграм" class="inst">
+                                <img src="./img/inst.svg" alt="инстаграм" class="inst">
                             </a> 
                         </div>
                     </div>
@@ -323,6 +323,6 @@
             </div>
         </footer>
 
-        <script src="../js/main.js"></script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
