renamed:    pages/contacts.html -> contacts.html 	modified:   index.html 	renamed:    pages/our-team.html -> our-team.html 	renamed:    pages/price.html -> price.html

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
                     </a>
                     <ul class="nav">
                         <li><a href="#"><p>Главная</p></a></li>
-                        <li><a href="../pages/our-team.html" target="_self"><p>Мастера</p></a></li>
+                        <li><a href="./our-team.html" target="_self"><p>Мастера</p></a></li>
                         <li><a href="#"><p>Косметика</p></a></li>
                     </ul>
                     <img src="./img/logo.svg" alt="логотип" class="logo">
                     <ul class="nav">
                         <li><a href="#"><p>Акции</p></a></li>
                         <li><a href="#"><p>Отзывы</p></a></li>
-                        <li><a href="../pages/contacts.html" target="_self"><p>Контакты</p></a></li>
+                        <li><a href="./contacts.html" target="_self"><p>Контакты</p></a></li>
                     </ul>
                     <button class="btn">
                         <img src="./img/right-menu.svg" alt="меню" class="menu">
@@ -126,7 +126,7 @@
                 <div class="grid">
                     <div class="grid-1">
                         <div class="img-grid">
-                            <a href="../pages/price.html" target="_self">
+                            <a href="./price.html" target="_self">
                                 <img src="./img/services/barbershop.svg" alt="завивка волос" class="grid-img">
                             </a>
                             <div class="shadow"></div>
@@ -139,7 +139,7 @@
                     </div>
                     <div class="grid-2">
                         <div class="img-grid">
-                            <a href="../pages/price.html" target="_self">
+                            <a href="./price.html" target="_self">
                                 <img src="./img/services/manicure.svg" alt="маникюр" class="grid-img">
                             </a>
                             <div class="shadow"></div>
@@ -152,7 +152,7 @@
                     </div>
                     <div class="grid-3">
                         <div class="img-grid">
-                            <a href="../pages/price.html" target="_self">
+                            <a href="./price.html" target="_self">
                                 <img src="./img/services/pedicure.svg" alt="Педикюр" class="grid-img">
                             </a>
                             <div class="shadow"></div>
@@ -165,7 +165,7 @@
                     </div>
                     <div class="grid-4">
                         <div class="img-grid">
-                            <a href="../pages/price.html" target="_self">
+                            <a href="./price.html" target="_self">
                                 <img src="./img/services/cosmetology.svg" alt="маска для лица" class="grid-img">
                             </a>
                             <div class="shadow"></div>
@@ -178,7 +178,7 @@
                     </div>
                     <div class="grid-5">
                         <div class="img-grid">
-                            <a href="../pages/price.html">
+                            <a href="./price.html">
                                 <img src="./img/services/body-esthetician.svg" alt="эстетист по телу" class="grid-img">
                             </a>
                             <div class="shadow"></div>
@@ -191,7 +191,7 @@
                     </div>
                     <div class="grid-6">
                         <div class="img-grid">
-                            <a href="../pages/price.html">
+                            <a href="./price.html">
                                 <img src="./img/services/makeup.svg" alt="макияж" class="grid-img">
                             </a>
                             <div class="shadow"></div>
