--- a/contacts.html
+++ b/contacts.html
@@ -4,22 +4,22 @@
         <title>Наши Мастера</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="../css/style.css" rel="stylesheet">
+        <link href="./css/style.css" rel="stylesheet">
     </head>
     <body>
         <header>
             <div class="container">
                 <nav class="navigation">
                     <a href="#">
-                        <img src="../img/inst.svg" alt="инстаграм" class="inst">
+                        <img src="./img/inst.svg" alt="инстаграм" class="inst">
                     </a>
                     <ul class="nav">
-                        <li><a href="../pages/index.html" target="_self"><p>Главная</p></a></li>
-                        <li><a href="../pages/our-team.html" target="_self"><p>Мастера</p></a></li>
+                        <li><a href="./index.html" target="_self"><p>Главная</p></a></li>
+                        <li><a href="./our-team.html" target="_self"><p>Мастера</p></a></li>
                         <li><a href="#"><p>Косметика</p></a></li>
                     </ul>
-                    <a href="../pages/index.html" target="_self">
-                        <img src="../img/logo.svg" alt="логотип" class="logo">
+                    <a href="./index.html" target="_self">
+                        <img src="./img/logo.svg" alt="логотип" class="logo">
                     </a>
                     <ul class="nav">
                         <li><a href="#"><p>Акции</p></a></li>
@@ -27,12 +27,12 @@
                         <li><a href="#"><p>Контакты</p></a></li>
                     </ul>
                     <button class="btn">
-                        <img src="../img/right-menu.svg" alt="меню" class="menu">
+                        <img src="./img/right-menu.svg" alt="меню" class="menu">
                     </button>
                 </nav>
                 <div class="sidebar">
                     <button class="btn">
-                        <img src="../img/close-icon.svg" alt="закрыть" class="close">
+                        <img src="./img/close-icon.svg" alt="закрыть" class="close">
                     </button>
                     <div class="inner-sidebar">
                         <div class="text-inner-sidebar">
@@ -194,7 +194,7 @@
         <footer id="footer">
             <div class="container">
                 <div class="footer">
-                    <img src="../img/logo.svg" alt="логотип" class="logo">
+                    <img src="./img/logo.svg" alt="логотип" class="logo">
                     <div class="contacts">
                         <div class="title-contacts">
                             <h4>
@@ -244,7 +244,7 @@
                         </h4>
                         <div class="img-inst">
                             <a href="#">
-                                <img src="../img/inst.svg" alt="инстаграм" class="inst">
+                                <img src="./img/inst.svg" alt="инстаграм" class="inst">
                             </a> 
                         </div>
                     </div>
@@ -256,6 +256,6 @@
                 </div>
             </div>
         </footer>
-        <script src="../js/main.js"></script>
+        <script src="./js/main.js"></script>
     </body>
 </html> 
