--- a/our-team.html
+++ b/our-team.html
@@ -4,30 +4,30 @@
         <title>Наши Мастера</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="../css/style.css" rel="stylesheet">
+        <link href="./css/style.css" rel="stylesheet">
     </head>
     <body>
         <header>
             <div class="container">
                 <nav class="navigation">
                     <a href="#">
-                        <img src="../img/inst.svg" alt="инстаграм" class="inst">
+                        <img src="./img/inst.svg" alt="инстаграм" class="inst">
                     </a>
                     <ul class="nav">
-                        <li><a href="../pages/index.html" target="_self"><p>Главная</p></a></li>
+                        <li><a href="./index.html" target="_self"><p>Главная</p></a></li>
                         <li><a href="#"><p>Мастера</p></a></li>
                         <li><a href="#"><p>Косметика</p></a></li>
                     </ul>
-                    <a href="../pages/index.html" target="_self">
-                        <img src="../img/logo.svg" alt="логотип" class="logo">
+                    <a href="./index.html" target="_self">
+                        <img src="./img/logo.svg" alt="логотип" class="logo">
                     </a>
                     <ul class="nav">
                         <li><a href="#"><p>Акции</p></a></li>
                         <li><a href="#"><p>Отзывы</p></a></li>
-                        <li><a href="../pages/contacts.html" target="_self"><p>Контакты</p></a></li>
+                        <li><a href="./contacts.html" target="_self"><p>Контакты</p></a></li>
                     </ul>
                     <button class="btn">
-                        <img src="../img/right-menu.svg" alt="меню" class="menu">
+                        <img src="./img/right-menu.svg" alt="меню" class="menu">
                     </button>
                 </nav>
                 <div class="sidebar">
@@ -99,7 +99,7 @@
                     <div class="grid">
                         <div class="grid-1">
                             <div class="img-grid">
-                                <img src="../img/our-team-page/img1.png" alt="Женщина" class="grid-img">
+                                <img src="./img/our-team-page/img1.png" alt="Женщина" class="grid-img">
                                 <div class="shadow"></div>
                             </div>
                             <div class="name-grid">
@@ -115,7 +115,7 @@
                         </div>
                         <div class="grid-2">
                             <div class="img-grid">
-                                <img src="../img/our-team-page/img2.png" alt="Женщина" class="grid-img">
+                                <img src="./img/our-team-page/img2.png" alt="Женщина" class="grid-img">
                                 <div class="shadow"></div>
                             </div>
                             <div class="name-grid">
@@ -131,7 +131,7 @@
                         </div>
                         <div class="grid-3">
                             <div class="img-grid">
-                                <img src="../img/our-team-page/img1.png" alt="Женщина" class="grid-img">
+                                <img src="./img/our-team-page/img1.png" alt="Женщина" class="grid-img">
                                 <div class="shadow"></div>
                             </div>
                             <div class="name-grid">
@@ -147,7 +147,7 @@
                         </div>
                         <div class="grid-4">
                             <div class="img-grid">
-                                <img src="../img/our-team-page/img3.png" alt="Женщина" class="grid-img">
+                                <img src="./img/our-team-page/img3.png" alt="Женщина" class="grid-img">
                                 <div class="shadow"></div>
                             </div>
                             <div class="name-grid">
@@ -163,7 +163,7 @@
                         </div>
                         <div class="grid-5">
                             <div class="img-grid">
-                                <img src="../img/our-team-page/img4.png" alt="Женщина" class="grid-img">
+                                <img src="./img/our-team-page/img4.png" alt="Женщина" class="grid-img">
                                 <div class="shadow"></div>
                             </div>
                             <div class="name-grid">
@@ -179,7 +179,7 @@
                         </div>
                         <div class="grid-6">
                             <div class="img-grid">
-                                <img src="../img/our-team-page/img5.png" alt="Женщина" class="grid-img">
+                                <img src="./img/our-team-page/img5.png" alt="Женщина" class="grid-img">
                                 <div class="shadow"></div>
                             </div>
                             <div class="name-grid">
@@ -200,7 +200,7 @@
         <footer id="footer">
             <div class="container">
                 <div class="footer">
-                    <img src="../img/logo.svg" alt="логотип" class="logo">
+                    <img src="./img/logo.svg" alt="логотип" class="logo">
                     <div class="contacts">
                         <div class="title-contacts">
                             <h4>
@@ -250,7 +250,7 @@
                         </h4>
                         <div class="img-inst">
                             <a href="#">
-                                <img src="../img/inst.svg" alt="инстаграм" class="inst">
+                                <img src="./img/inst.svg" alt="инстаграм" class="inst">
                             </a> 
                         </div>
                     </div>
@@ -262,6 +262,6 @@
                 </div>
             </div>
         </footer>
-        <script src="../js/main.js"></script>
+        <script src="./js/main.js"></script>
     </body>
 </html> 
