modified:   price.html

--- a/price.html
+++ b/price.html
@@ -4,35 +4,35 @@
         <title>Цены</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="../css/style.css" rel="stylesheet">
+        <link href="./css/style.css" rel="stylesheet">
     </head>
     <body>
         <header>
             <div class="container">
                 <nav class="navigation">
                     <a href="#">
-                        <img src="../img/inst.svg" alt="инстаграм" class="inst">
+                        <img src="./img/inst.svg" alt="инстаграм" class="inst">
                     </a>
                     <ul class="nav">
-                        <li><a href="../pages/index.html" target="_self"><p>Главная</p></a></li>
-                        <li><a href="../pages/our-team.html" target="_self"><p>Мастера</p></a></li>
+                        <li><a href="./index.html" target="_self"><p>Главная</p></a></li>
+                        <li><a href="./our-team.html" target="_self"><p>Мастера</p></a></li>
                         <li><a href="#"><p>Косметика</p></a></li>
                     </ul>
-                    <a href="../pages/index.html" target="_self">
-                        <img src="../img/logo.svg" alt="логотип" class="logo">
+                    <a href="./index.html" target="_self">
+                        <img src="./img/logo.svg" alt="логотип" class="logo">
                     </a>
                     <ul class="nav">
                         <li><a href="#"><p>Акции</p></a></li>
                         <li><a href="#"><p>Отзывы</p></a></li>
-                        <li><a href="../pages/our-team.html" target="_self"><p>Контакты</p></a></li>
+                        <li><a href="./pages/our-team.html" target="_self"><p>Контакты</p></a></li>
                     </ul>
                     <button class="btn">
-                        <img src="../img/right-menu.svg" alt="меню" class="menu">
+                        <img src="./img/right-menu.svg" alt="меню" class="menu">
                     </button>
                 </nav>
                 <div class="sidebar">
                     <button class="btn">
-                        <img src="../img/close-icon.svg" alt="закрыть" class="close">
+                        <img src="./img/close-icon.svg" alt="закрыть" class="close">
                     </button>
                     <div class="inner-sidebar">
                         <div class="text-inner-sidebar">
@@ -99,7 +99,7 @@
                     <!-- 1 -->
                     <div class="wrapper">
                         <div class="content-img">
-                            <img class="img-price" src="../img/price-page/img1.png" alt="моет волосы">
+                            <img class="img-price" src="./img/price-page/img1.png" alt="моет волосы">
                         </div>
                         <div class="left-grid-content">
                             <div class="content-price">
@@ -183,7 +183,7 @@
                     <!-- 2 -->
                     <div class="wrapper">
                         <div class="content-img grid-price-2">
-                            <img class="img-price" src="../img/price-page/img1.png" alt="моет волосы">
+                            <img class="img-price" src="./img/price-page/img1.png" alt="моет волосы">
                         </div>
                         <div class="left-grid-content grid-price-2">
                             <div class="content-price">
@@ -267,7 +267,7 @@
                     <!-- 3 -->
                     <div class="wrapper">
                         <div class="content-img">
-                            <img class="img-price" src="../img/price-page/img1.png" alt="моет волосы">
+                            <img class="img-price" src="./img/price-page/img1.png" alt="моет волосы">
                         </div>
                         <div class="left-grid-content">
                             <div class="content-price">
