modified:   price.html

--- a/price.html
+++ b/price.html
@@ -354,7 +354,7 @@
         <footer id="footer">
             <div class="container">
                 <div class="footer">
-                    <img src="../img/logo.svg" alt="логотип" class="logo">
+                    <img src="./img/logo.svg" alt="логотип" class="logo">
                     <div class="contacts">
                         <div class="title-contacts">
                             <h4>
@@ -404,7 +404,7 @@
                         </h4>
                         <div class="img-inst">
                             <a href="#">
-                                <img src="../img/inst.svg" alt="инстаграм" class="inst">
+                                <img src="./img/inst.svg" alt="инстаграм" class="inst">
                             </a> 
                         </div>
                     </div>
@@ -416,6 +416,6 @@
                 </div>
             </div>
         </footer>
-        <script src="../js/main.js"></script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
