--- a/our-team.html
+++ b/our-team.html
@@ -13,15 +13,13 @@
                     <a href="#">
                         <img src="./img/inst.svg" alt="инстаграм" class="inst">
                     </a>
-                    <ul class="nav">
+                    <ul class="nav d-none" >
                         <li><a href="./index.html" target="_self"><p>Главная</p></a></li>
-                        <li><a href="#"><p>Мастера</p></a></li>
+                        <li><a href="./our-team.html" target="_self"><p>Мастера</p></a></li>
                         <li><a href="#"><p>Косметика</p></a></li>
                     </ul>
-                    <a href="./index.html" target="_self">
-                        <img src="./img/logo.svg" alt="логотип" class="logo">
-                    </a>
-                    <ul class="nav">
+                    <img src="./img/logo.svg" alt="логотип" class="logo">
+                    <ul class="nav d-none">
                         <li><a href="#"><p>Акции</p></a></li>
                         <li><a href="#"><p>Отзывы</p></a></li>
                         <li><a href="./contacts.html" target="_self"><p>Контакты</p></a></li>
@@ -32,10 +30,18 @@
                 </nav>
                 <div class="sidebar">
                     <button class="btn">
-                        <img src="../img/close-icon.svg" alt="закрыть" class="close">
+                        <img src="./img/close-icon.svg" alt="закрыть" class="close">
                     </button>
                     <div class="inner-sidebar">
-                        <div class="text-inner-sidebar">
+                        <ul class="nav responsive">
+                            <li><a href="./index.html" target="_self"><p>Главная</p></a></li>
+                            <li><a href="./our-team.html" target="_self"><p>Мастера</p></a></li>
+                            <li><a href="#"><p>Косметика</p></a></li>
+                            <li><a href="#"><p>Акции</p></a></li>
+                            <li><a href="#"><p>Отзывы</p></a></li>
+                            <li><a href="./contacts.html" target="_self"><p>Контакты</p></a></li>
+                        </ul>
+                        <div class="text-inner-sidebar d-none">
                             <p>
                                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                                 Ipsum, adipiscing amet in egestas sem dui, arcu faucibus scelerisque. 
@@ -43,7 +49,7 @@
                                 Tortor donec pellentesque leo ac placerat. Morbi.
                             </p>
                         </div>
-                        <div class="contacts">
+                        <div class="contacts d-none">
                             <div class="title-contacts">
                                 <h4>
                                     Контакты
@@ -67,7 +73,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="contacts">
+                        <div class="contacts d-none">
                             <div class="title-contacts">
                                 <h4>
                                     Режим работы
@@ -92,7 +98,7 @@
         </header>
         <section id="our-team">
             <div class="container">
-                <div class="our-team">
+                <div class="works our-team">
                     <div class="title-work">
                         <h2>Наши мастера</h2>
                     </div>
@@ -200,7 +206,7 @@
         <footer id="footer">
             <div class="container">
                 <div class="footer">
-                    <img src="./img/logo.svg" alt="логотип" class="logo">
+                    <img src="./img/logo.svg" alt="логотип" class="logo d-none">
                     <div class="contacts">
                         <div class="title-contacts">
                             <h4>
@@ -244,7 +250,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="insta">
+                    <div class="insta d-none">
                         <h4>
                             Мы в Instagram
                         </h4>
