--- a/price.html
+++ b/price.html
@@ -18,7 +18,9 @@
                         <li><a href="./our-team.html" target="_self"><p>Мастера</p></a></li>
                         <li><a href="#"><p>Косметика</p></a></li>
                     </ul>
-                    <img src="./img/logo.svg" alt="логотип" class="logo">
+                    <a href="./index.html">
+                        <img src="./img/logo.svg" alt="логотип" class="logo">
+                    </a>
                     <ul class="nav d-none">
                         <li><a href="#"><p>Акции</p></a></li>
                         <li><a href="#"><p>Отзывы</p></a></li>
